--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <html>
+  <head>
 <style>
   * { box-sizing: border-box; }
 .video-background {
@@ -37,6 +38,8 @@
 .vid-info .acronym { display: none; }
 }
 </style>
+<script src="//cache.bricklink.info/vendor/iframeResizer.contentWindow.3.5.3.min.js"></script>
+</head>
 <body>
   <div class="video-background">
     <div class="video-foreground">
