added _top to the href

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     <h3>📦 Standard Domestic Shipping</h3>
     <p>Each lot bagged is separately.
     <p>$4.99</p>
-	 <a href=https://store.bricklink.com/ralphs_bricks&utm_content=globalnav#/Shop">🛒 Start shopping!!</a>
+	 <a href=https://store.bricklink.com/ralphs_bricks&utm_content=globalnav#/Shop" target="_top">🛒 Start shopping!!</a>
   </div>
 </div>
 
