--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <html>
   <head>
 <style>
+body{
+  height: 3000px;
+}
   * { box-sizing: border-box; }
 .video-background {
   background: #000;
@@ -14,7 +17,7 @@
   top: 0;
   left: 0;
   width: 100%;
-  height: 1000px;
+  height: 100%;
   pointer-events: none;
 }
 #vidtop-content {
@@ -38,6 +41,7 @@
 .vid-info .acronym { display: none; }
 }
 </style>
+<script src="//cache.bricklink.info/vendor/iframeResizer.contentWindow.3.5.3.min.js"></script>
 </head>
 <body>
   <div class="video-background">
@@ -47,7 +51,7 @@
   </div>
 
 <div id="vidtop-content">
-<div class="vid-info">
+  <div class="vid-info">
 	  <h1>Welcome to Ralph's Bricks &amp; Minifigs</h1>
 	  <p>🚚💨 <strong>FREE SHIPPING*</strong> on orders over $35!</p>
     <p>Currently only shipping to 🇺🇸</p>
