--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 .vid-info { position: absolute; top: 0; right: 0; width: 40%; background: rgba(0,0,0,0.6); color: #fff; padding: 1rem; font-family: Avenir, Helvetica, sans-serif; }
 .vid-info h1 { font-size: 2rem; font-weight: 700; margin-top: 0; line-height: 1.2; }
 .vid-info a { display: block; color: #fff; text-decoration: none; background: rgba(0,0,0,0.5); transition: .6s background; border-bottom: none; margin: 1rem auto; text-align: center; }
-@media (min-aspect-ratio: 16/9) {
+/* @media (min-aspect-ratio: 16/9) {
   .video-foreground { height: 300%; top: -100%; }
 }
 @media (max-aspect-ratio: 16/9) {
@@ -36,7 +36,7 @@
 }
 @media all and (max-width: 500px) {
 .vid-info .acronym { display: none; }
-}
+} */
 </style>
 <script src="//cache.bricklink.info/vendor/iframeResizer.contentWindow.3.5.3.min.js"></script>
 </head>
