--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
   <head>
 <style>
   * { box-sizing: border-box; }
+  .container {
+    height: 1000px;
+  }
 .video-background {
   background: #000;
   position: fixed;
@@ -10,7 +13,7 @@
 }
 .video-foreground,
 .video-background iframe {
-  position: fixed;
+  position: absolute;
   top: 0;
   left: 0;
   width: 100%;
@@ -24,7 +27,7 @@
 .vid-info { position: absolute; top: 0; right: 0; width: 40%; background: rgba(0,0,0,0.6); color: #fff; padding: 1rem; font-family: Avenir, Helvetica, sans-serif; }
 .vid-info h1 { font-size: 2rem; font-weight: 700; margin-top: 0; line-height: 1.2; }
 .vid-info a { display: block; color: #fff; text-decoration: none; background: rgba(0,0,0,0.5); transition: .6s background; border-bottom: none; margin: 1rem auto; text-align: center; }
-/* @media (min-aspect-ratio: 16/9) {
+@media (min-aspect-ratio: 16/9) {
   .video-foreground { height: 300%; top: -100%; }
 }
 @media (max-aspect-ratio: 16/9) {
@@ -36,11 +39,12 @@
 }
 @media all and (max-width: 500px) {
 .vid-info .acronym { display: none; }
-} */
+}
 </style>
 <script src="//cache.bricklink.info/vendor/iframeResizer.contentWindow.3.5.3.min.js"></script>
 </head>
 <body>
+<div class="container">
   <div class="video-background">
     <div class="video-foreground">
       <iframe src="https://www.youtube.com/embed/f2zj5qybVLc?controls=0&loop=1&showinfo=0&rel=0&autoplay=1&mute=1&playlist=f2zj5qybVLc" frameborder="0" allowfullscreen></iframe>
@@ -64,6 +68,6 @@
 	 <a href=https://store.bricklink.com/ralphs_bricks&utm_content=globalnav#/Shop" target="_top">🛒 Start shopping!!</a>
   </div>
 </div>
-
+</div>
 </body>
 </html>
