--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
   <head>
 <style>
   * { box-sizing: border-box; }
+  body {
+    margin: 0px;
+  }
   .container {
     height: 1000px;
   }
@@ -23,8 +26,11 @@
 #vidtop-content {
 	top: 0;
 	color: #fff;
+  background: rgba(0,0,0,0.3);
+  width: 100%;
+  height:100%;
 }
-.vid-info { position: absolute; top: 0; right: 0; width: 40%; background: rgba(0,0,0,0.6); color: #fff; padding: 1rem; font-family: Avenir, Helvetica, sans-serif; }
+.vid-info { position: absolute; top: 0; left: 0; width: 40%; background: rgba(0,0,0,0.6);color: #fff; padding: 1rem; font-family: Avenir, Helvetica, sans-serif; }
 .vid-info h1 { font-size: 2rem; font-weight: 700; margin-top: 0; line-height: 1.2; }
 .vid-info a { display: block; color: #fff; text-decoration: none; background: rgba(0,0,0,0.5); transition: .6s background; border-bottom: none; margin: 1rem auto; text-align: center; }
 @media (min-aspect-ratio: 16/9) {
@@ -65,7 +71,6 @@
     <h3>📦 Standard Domestic Shipping</h3>
     <p>Each lot bagged is separately.
     <p>$4.99</p>
-	 <a href=https://store.bricklink.com/ralphs_bricks&utm_content=globalnav#/Shop" target="_top">🛒 Start shopping!!</a>
   </div>
 </div>
 </div>
