--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
 <div id="vidtop-content">
   <div class="vid-info">
-	  <h1>Welcome to Ralph's Bricks &amp; Minifigs</h1>
+	  <h1>Welcome to Ralph's Bricks</h1>
 	  <p>🚚💨 <strong>FREE SHIPPING*</strong> on orders over $35!</p>
     <p>Currently only shipping to 🇺🇸</p>
     <hr>
