--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 	  <p>🚚💨 <strong>FREE SHIPPING*</strong> on orders over $35!</p>
     <p>Currently only shipping to 🇺🇸</p>
     <hr>
-    <h2>Choose how you want your order packed at checkout</h2>
+    <h2>Choose how your order is packed at checkout</h2>
     <h3>♻️ Environmentally-friendly Shipping</h3>
     <p>Lots are bagged together to minimize the number of bags needed.</p>
     <p>$3.99 simple rate ($4.49 for orders under $1)</p>
