--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     <p>$3.99 simple rate ($4.49 for orders under $1)</p>
     <p>* Free shipping is only available in Environmentally-friendly shipping </p>
     <h3>📦 Standard Domestic Shipping</h3>
-    <p>Each lot bagged is separately.
+    <p>Each lot bagged separately.
     <p>$4.99</p>
   </div>
 </div>
