--- a/index.html
+++ b/index.html
@@ -48,6 +48,15 @@
 }
 </style>
 <script src="//cache.bricklink.info/vendor/iframeResizer.contentWindow.3.5.3.min.js"></script>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-455L7NSCSC"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-455L7NSCSC');
+</script>
 </head>
 <body>
 <div class="container">
