--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   width: 100%;
   height:100%;
 }
-.vid-info { position: absolute; top: 0; left: 0; width: 40%; background: rgba(0,0,0,0.6);color: #fff; padding: 1rem; font-family: Avenir, Helvetica, sans-serif; }
+.vid-info { position: absolute; top: 0; left: 0; width: 40%; height: 1000px; background: rgba(0,0,0,0.6);color: #fff; padding: 1rem; font-family: Avenir, Helvetica, sans-serif; }
 .vid-info h1 { font-size: 2rem; font-weight: 700; margin-top: 0; line-height: 1.2; }
 .vid-info a { display: block; color: #fff; text-decoration: none; background: rgba(0,0,0,0.5); transition: .6s background; border-bottom: none; margin: 1rem auto; text-align: center; }
 @media (min-aspect-ratio: 16/9) {
