--- a/index.html
+++ b/index.html
@@ -48,17 +48,11 @@
 <div class="vid-info">
 	  <h1>Welcome to Ralph's Bricks &amp; Minifigs</h1>
 	  <p>🚚💨 <strong>FREE SHIPPING*</strong> on orders over $35!</p>
-    <p>Currently only shipping to 🇺🇸</p>
+    <p>Currently only shipping to the US</p>
     <hr>
-    <h2>Choose how you want your order packed at checkout</h2>
-    <h3>♻️ Environmentally-friendly Shipping</h3>
     <p>Lots are bagged together to minimize the number of bags needed.</p>
-    <p>$3.99 simple rate ($4.49 for orders under $1)</p>
-    <p>* Free shipping is only available in Environmentally-friendly shipping </p>
-    <h3>📦 Standard Domestic Shipping</h3>
-    <p>Each lot bagged is separately.
-    <p>$4.99</p>
-	 <a href=https://store.bricklink.com/ralphs_bricks&utm_content=globalnav#/Shop">🛒 Start shopping!!</a>
+    <p>$3.99 simple rate ($4.49 for orders under $2)</p>
+    <a href=https://store.bricklink.com/ralphs_bricks&utm_content=globalnav#/Shop">🛒 Start shopping!!</a>
   </div>
 </div>
 
