--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
   width: 100%;
   height:100%;
 }
-.vid-info { position: absolute; top: 0; left: 0; width: 40%; height: 1000px; background: rgba(0,0,0,0.6);color: #fff; padding: 1rem; font-family: Avenir, Helvetica, sans-serif; }
+.vid-info { position: absolute; top: 0; left: 0; width: 30%; height: 1000px; background: rgba(0,0,0,0.6);color: #fff; padding: 1rem; font-family: Avenir, Helvetica, sans-serif; }
+.vid-info img { width: 100%;}
 .vid-info h1 { font-size: 2rem; font-weight: 700; margin-top: 0; line-height: 1.2; }
 .vid-info a { display: block; color: #fff; text-decoration: none; background: rgba(0,0,0,0.5); transition: .6s background; border-bottom: none; margin: 1rem auto; text-align: center; }
 @media (min-aspect-ratio: 16/9) {
@@ -47,7 +48,7 @@
 .vid-info .acronym { display: none; }
 }
 </style>
-<script src="//cache.bricklink.info/vendor/iframeResizer.contentWindow.3.5.3.min.js"></script>
+<!-- <script src="//cache.bricklink.info/vendor/iframeResizer.contentWindow.3.5.3.min.js"></script> -->
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-455L7NSCSC"></script>
 <script>
@@ -62,13 +63,14 @@
 <div class="container">
   <div class="video-background">
     <div class="video-foreground">
-      <iframe src="https://www.youtube.com/embed/f2zj5qybVLc?controls=0&loop=1&showinfo=0&rel=0&autoplay=1&mute=1&playlist=f2zj5qybVLc" frameborder="0" allowfullscreen></iframe>
+      <iframe src="https://www.youtube.com/embed/MlRVh3p4lO8?controls=0&loop=1&showinfo=0&rel=0&autoplay=1&mute=1&playlist=MlRVh3p4lO8" frameborder="0" allowfullscreen></iframe>
     </div>
   </div>
 
 <div id="vidtop-content">
   <div class="vid-info">
-	  <h1>Welcome to Ralph's Bricks</h1>
+    <img src="https://i.imgur.com/q0gNxBU.png">
+
 	  <p>🚚💨 <strong>FREE SHIPPING*</strong> on orders over $35!</p>
     <p>Currently only shipping to the US</p>
     <hr>
