Forgot to uncomment a line

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 .vid-info .acronym { display: none; }
 }
 </style>
-<!-- <script src="//cache.bricklink.info/vendor/iframeResizer.contentWindow.3.5.3.min.js"></script> -->
+<script src="//cache.bricklink.info/vendor/iframeResizer.contentWindow.3.5.3.min.js"></script>
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-455L7NSCSC"></script>
 <script>
